@@ -767,6 +767,8 @@ Release 2.8.0 - UNRELEASED
     HDFS-8815. DFS getStoragePolicy implementation using single RPC call
     (Surendra Singh Lilhore via vinayakumarb)
 
+    HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
